Squashable commit; interim work
Signed-off-by: Laird Nelson <ljnelson@gmail.com>