@@ -3,12 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.microbean</groupId>
-  <artifactId>microbean-lang</artifactId>
+  <artifactId>microbean-lang-parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-  <name>microBean™ Lang</name>
-  <description>microBean™ Lang: An implementation of the Java language model.</description>
-  <inceptionYear>2022</inceptionYear>
+  <name>microBean™ Lang Parent</name>
+  <description>microBean™ Lang Parent: The parent project of the microBean™ Lang project suite.</description>
+  <inceptionYear>2023</inceptionYear>
   <url>https://microbean.github.io/microbean-lang</url>
 
   <licenses>
@@ -52,11 +53,22 @@
   </issueManagement>
 
   <distributionManagement>
+    <site>
+      <id>Github Pages</id>
+      <name>microBean™ Lang Site</name>
+      <url>https://microbean.github.io/microbean-lang/</url>
+    </site>
     <snapshotRepository>
       <id>sonatype-oss-repository-hosting</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
   </distributionManagement>
+
+  <modules>
+    <module>byte-buddy</module>
+    <module>jandex</module>
+    <module>lang</module>
+  </modules>
 
   <dependencyManagement>
     <dependencies>
@@ -66,16 +78,16 @@
 
 
       <dependency>
-        <groupId>org.microbean</groupId>
-        <artifactId>microbean-constant</artifactId>
-        <version>0.0.4</version>
+        <groupId>io.smallrye</groupId>
+        <artifactId>jandex</artifactId>
+        <version>3.0.5</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
-        <groupId>org.microbean</groupId>
-        <artifactId>microbean-development-annotations</artifactId>
-        <version>0.2.12</version>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy</artifactId>
+        <version>1.12.22</version>
         <type>jar</type>
       </dependency>
 
@@ -107,56 +119,31 @@
         <type>jar</type>
       </dependency>
 
+      <!-- Module dependencies. -->
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>microbean-lang</artifactId>
+        <version>${project.version}</version>
+        <type>jar</type>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>microbean-lang-byte-buddy</artifactId>
+        <version>${project.version}</version>
+        <type>jar</type>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>microbean-lang-jandex</artifactId>
+        <version>${project.version}</version>
+        <type>jar</type>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
-
-  <dependencies>
-
-
-    <!-- Compile-scoped dependencies. -->
-
-
-    <dependency>
-      <groupId>org.microbean</groupId>
-      <artifactId>microbean-constant</artifactId>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.microbean</groupId>
-      <artifactId>microbean-development-annotations</artifactId>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
-
-
-    <!-- Test-scoped dependencies. -->
-
-
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-
-
-  </dependencies>
 
   <build>
     <pluginManagement>
@@ -194,10 +181,6 @@
           <version>3.10.1</version>
           <configuration>
             <compilerArgs>
-              <arg>--add-exports</arg>
-              <arg>jdk.compiler/com.sun.tools.javac.code=org.microbean.lang</arg>
-              <arg>--add-exports</arg>
-              <arg>jdk.compiler/com.sun.tools.javac.model=org.microbean.lang</arg>
               <arg>--enable-preview</arg>
               <arg>-parameters</arg>
               <arg>-Xlint:all</arg>
@@ -238,10 +221,6 @@
               <additionalJOption>-J-Dhttp.agent=maven-javadoc-plugin</additionalJOption>
             </additionalJOptions>
             <additionalOptions>
-              <!--
-              <additionalOption>-add-exports</additionalOption>
-              <additionalOption>jdk.compiler/com.sun.tools.javac.code=org.microbean.lang</additionalOption>
-              -->
               <additionalOption>--add-stylesheet</additionalOption>
               <additionalOption>${project.basedir}/src/main/javadoc/css/fonts.css</additionalOption>
               <additionalOption>--enable-preview</additionalOption>
@@ -275,7 +254,16 @@
         </plugin>
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
-          <version>4.0.0-M3</version>
+          <version>4.0.0-M4</version>
+          <executions>
+            <execution>
+              <id>Stage site</id>
+              <goals>
+                <goal>stage</goal>
+              </goals>
+              <phase>post-site</phase>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <artifactId>maven-source-plugin</artifactId>
@@ -293,18 +281,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M7</version>
           <configuration>
-            <argLine>
-              <!--
-              -add-exports java.base/jdk.internal.vm.annotation=org.microbean.lang
-              -add-exports java.base/jdk.internal.util.random=org.microbean.lang
-              -->
-              --add-exports jdk.compiler/com.sun.tools.javac.code=org.microbean.lang
-              --add-opens jdk.compiler/com.sun.tools.javac.model=org.microbean.lang
-              --add-opens org.microbean.lang/org.microbean.lang=ALL-UNNAMED
-              --enable-preview
-            </argLine>
-            <!-- See https://junit.org/junit5/docs/snapshot/user-guide/#running-tests-build-maven-config-params -->
-            <!-- See https://github.com/apache/maven-surefire/blob/eb48f1b59ca5ccf6954ef33ecab03dbaf93214cd/surefire-providers/surefire-junit-platform/src/main/java/org/apache/maven/surefire/junitplatform/JUnitPlatformProvider.java#L242-L262 -->
+            <argLine>--enable-preview</argLine>
             <properties>
               <configurationParameters>
                 junit.jupiter.execution.parallel.enabled=false
@@ -412,6 +389,8 @@
     <!-- maven-site-plugin properties -->
     <maven.site.deploy.skip>true</maven.site.deploy.skip>
     <relativizeDecorationLinks>false</relativizeDecorationLinks>
+    <siteOutputDirectory>${project.build.directory}/staging</siteOutputDirectory>
+    <topSiteUrl>https://microbean.github.io/microbean-lang/</topSiteUrl>
 
     <!-- maven-surefire-plugin properties -->
     <surefire.useFile>false</surefire.useFile>
@@ -433,8 +412,17 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <reportSets>
           <reportSet>
+            <id>aggregate</id>
+            <inherited>false</inherited>
             <reports>
-              <report>javadoc-no-fork</report>
+              <report>aggregate</report>
+            </reports>
+          </reportSet>
+          <reportSet>
+            <id>default</id>
+            <inherited>true</inherited>
+            <reports>
+              <report>javadoc</report>
             </reports>
           </reportSet>
         </reportSets>
